--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,18 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/uniqid": "^5.3.2",
     "aos": "^2.3.4",
     "axios": "^1.2.2",
     "lscache": "^1.3.2",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.0",
     "typescript": "^4.9.4",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
